--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="/assets/dl-saude.ico" type="image/x-icon">
     <script src="script.js"></script>
-    <title>Dl Saúde</title>
+    <title>DL Saúde</title>
 </head>
 
 <body>
