--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <img class="slide" src="/assets/enfermeiros.jpeg" alt="">
                 <div id="info">
                     <div class="slide" id="info-content">
-                        <h1>Enfermeiro Delmiran Mendes</h1>
-                        <p>Profissional e empreendedor de 25 anos de experiência atuando em urgências e emergências pelo SAMU de Araraqura e GRAU de Ribeirão Preto</p>
+                        <h1>Instrutores</h1>
+                        <p>Profissionais de 25 anos de experiência atuando em urgências e emergências pelo SAMU-Serviço de Atendimento Móvel de Urgência de Araraquara-SP e GRAU-Grupo de Resgate e Atendimento a Urgências de Ribeirão Preto-SP</p>
                     </div>
                 </div>
             </div>
