--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img class="cont fade-in" src="/assets/logo-full.png" alt="">
                 <p class="cont fade-in">TREINAMENTO 100% PRATICO FOCADO PARA ESTUDANTES E PROFISSIONAIS DA SAÚDE</p>
                 <img class="cont fade-in" src="/assets/dl-saude.png" alt="dl saúde">
-                <p class="cont fade-in">VOCÊ SERÁ TREINADO POR INSTRUTORES QUE VIVEM O APH NA PRATICA DO DIA DIA DAS URGÊNCIAS E EMERGÊNCIAS </p>
+                <p class="cont fade-in">VOCÊ SERÁ TREINADO POR INSTRUTORES QUE VIVEM O APH NA PRÁTICA DO DIA A DIA DAS URGÊNCIAS E EMERGÊNCIAS.</p>
                 <a class="cont fade-in" href="https://hotmart.com/product/suporte-basico-de-vida-no-atendimento-pre-hospitalar/U83378509G" id="button">QUERO ME INSCREVER</a>
             </div>
             <div class="fade-in" id="grean-triangle"></div>
