--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="page3">
             <div id="greenbar"></div>
             <div class="content">
-                <h1 class="slide">Conteúdo do TREINAMENTO</h1>
+                <h1 class="slide">CONTEÚDO DO TREINAMENTO</h1>
                 <img class="cont slide" id="imgSBV" src="/assets/logo.png" alt="Logo">
                 <div class="panel slide">
                     <p id="text"><b>Cadeia de sobrevivência adulto e pediátrica:</b> RCP em adultos, crianças e bebês com manequins eletrônicos Feedback em tempo real 100% digital</p>
@@ -78,7 +78,7 @@
                 <img class="slide" src="/assets/enfermeiros.jpeg" alt="">
                 <div id="info">
                     <div class="slide" id="info-content">
-                        <h1>Instrutores</h1>
+                        <h1>INSTRUTORES</h1>
                         <p>Profissionais de 25 anos de experiência atuando em urgências e emergências pelo SAMU-Serviço de Atendimento Móvel de Urgência de Araraquara-SP e GRAU-Grupo de Resgate e Atendimento a Urgências de Ribeirão Preto-SP</p>
                     </div>
                 </div>
