--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="page1">
             <div class="content">
                 <img class="cont fade-in" src="/assets/logo-full.png" alt="">
-                <p class="cont fade-in">TREINAMENTO 100% PRATICO FOCADO PARA ESTUDANTES E PROFISSIONAIS DA SAÚDE</p>
+                <p class="cont fade-in">TREINAMENTO 100% PRÁTICO FOCADO PARA ESTUDANTES E PROFISSIONAIS DA SAÚDE</p>
                 <img class="cont fade-in" src="/assets/dl-saude.png" alt="dl saúde">
                 <p class="cont fade-in">VOCÊ SERÁ TREINADO POR INSTRUTORES QUE VIVEM O APH NA PRÁTICA DO DIA A DIA DAS URGÊNCIAS E EMERGÊNCIAS.</p>
                 <a class="cont fade-in" href="https://hotmart.com/product/suporte-basico-de-vida-no-atendimento-pre-hospitalar/U83378509G" id="button">QUERO ME INSCREVER</a>
@@ -60,10 +60,10 @@
                 <h1 class="slide">CONTEÚDO DO TREINAMENTO</h1>
                 <img class="cont slide" id="imgSBV" src="/assets/logo.png" alt="Logo">
                 <div class="panel slide">
-                    <p id="text"><b>Cadeia de sobrevivência adulto e pediátrica:</b> RCP em adultos, crianças e bebês com manequins eletrônicos Feedback em tempo real 100% digital</p>
+                    <p id="text"><b>Cadeia de sobrevivência adulto e pediátrica:</b> <br/> RCP em adultos, crianças e bebês com manequins eletrônicos Feedback em tempo real 100% digital</p>
                 </div>
                 <div class="panel slide">
-                    <p id="text"><b>+DEA OVACE e AVC</b> totalmente pratico e simulações realísticas <b>com conteúdo direcionado</b></p>
+                    <p id="text"><b>DEA (Desfibrilador Externo Automático). OVACE (Obstrução de vias aéreas por corpo estranho) e AVC (Acidente Vascular Cerebral).</b> totalmente pratico e simulações realísticas <b>com conteúdo direcionado</b></p>
                     </div>
                 </div>
 
